<resources>
    <string name="app_name">AppTaurus</string>
    <string name="title_intro1">Coloque limites</string>
    <string name="title_intro2">Defina objetivos</string>
    <string name="title_intro3">Fácil de usar</string>
    <string name="text_intro1">Aqui você pode colocar limites em todos os seus gastos atuais podendo ter um controle melhor sobre eles</string>
    <string name="text_intro2">Você pode definir objetivos e nos te ajudaremos a você controlar sua grana para concluir o objetivo</string>
    <string name="text_intro3">Muito fácil de utilizar e fácil de entender para os iniciantes</string>
    <string name="button_intro">Próximo passo</string>
    <string name="title_cadastro">Seja bem-vindo!</string>
    <string name="title_gain">Adicione um ganho</string>
    <string name="title_spent">Adicione um gasto</string>
    <string name="title_description_entry">Descrição</string>
    <string name="title_category_entry">Categoria</string>
    <string name="R_cifrao">R$</string>
    <string name="cad_nome">Nome Completo</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="cad_nasc">Data de Nascimento</string>
    <string name="cad_cpf">CPF</string>
    <string name="btn_cad_tela">cadastrar</string>
    <string name="descricao_logi">Acesse e tenha o controle da sua vida financeira.</string>
    <string name="termos_cadastro">Eu concordo com os</string>
    <string name="termos2_cadastro">Termos e Condições</string>
    <string name="j_tem_uma_conta">Já tem uma conta?</string>
    <string name="login_cadastro">Login</string>
</resources>