<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginTela">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo_cad_log"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="32dp"
            android:paddingVertical="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/title_log"/>

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/descricao_logi"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                >

                <EditText
                    style="@style/inputs_cadastro"
                    android:id="@+id/et_login"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:drawableLeft="@drawable/icon_email"
                    />


                <EditText
                    android:id="@+id/et_senha"
                    style="@style/inputs_cadastro"
                    android:inputType="textPassword"
                    android:hint="@string/senha"
                    android:drawableLeft="@drawable/icon_senha"
                    />
                <TextView
                    android:id="@+id/erroLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/errorLogin"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="60dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_log"
                    style="@style/buttonLogin"
                    android:onClick="entrar"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_cad"
                    style="@style/buttonCadastro"/>

            </LinearLayout>


        </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>